<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/baseAppBarLayout"
        layout="@layout/base_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_big"
        android:text="@string/account_save" />

</LinearLayout>